<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Fill" Id="{9efb54ea-5c1b-4022-98c8-74c2304690c0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bStart AT %I* : BOOL := FALSE;
	mStart AT %Q* : BOOL;
	bStop AT %I* : BOOL := FALSE;
	bEmergency : BOOL := FALSE;
	fbBA: FB_BA_PIDCtrl;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>